update android build process

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+        }
+
         release {
             signingConfig signingConfigs.release
         }
