--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-
   shared_preferences: ^2.0.18
-
-  settings_ui: ^2.0.2
-
   pref: ^2.7.1
+  flutter_settings_screens: ^0.3.3-null-safety+2
 
 
 dev_dependencies:
