--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   pref: ^2.7.1
   flutter_settings_screens: ^0.3.3-null-safety+2
 
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   test: ^1.23.1
