--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.2+6
+version: 1.3.0+7
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.0.18
   pref: ^2.7.1
   flutter_settings_screens: ^0.3.3-null-safety+2
+  provider: ^6.0.5 
 
   flutter_localizations:
     sdk: flutter
