--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,31 +28,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  austerity: ^1.0.0
+  cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.5
-  shared_preferences: ^2.0.18
-  pref: ^2.7.1
-  flutter_settings_screens: ^0.3.3-null-safety+2
-  provider: ^6.0.5 
-
   flutter_localizations:
     sdk: flutter
+  flutter_settings_screens: ^0.3.3-null-safety+2
+  pref: ^2.7.1
+  provider: ^6.0.5
+  shared_preferences: ^2.0.18
+
 
 dev_dependencies:
-  test: ^1.23.1
-  #flutter_test:
-  #  sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
+  test: ^1.23.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
