--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.3.4+11
+version: 1.4.0+13
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -28,17 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  austerity: ^1.0.0
+  analyzer: ^5.13.0
   cupertino_icons: ^1.0.5
-  flutter:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  flutter_settings_screens: ^0.3.3-null-safety+2
+  settings_ui: ^2.0.2
   pref: ^2.7.1
   provider: ^6.0.5
-  shared_preferences: ^2.1.0
+  shared_preferences: ^2.1.1
+  url_launcher: ^6.1.11
+  duration_picker: ^1.1.1
 
+  flutter:
+    sdk: flutter
+
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -47,7 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
-  test: ^1.24.2
+  test: ^1.24.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
