--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,7 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    namespace 'net.codepunks.stempli'
 }
 
 flutter {
