--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.4.4+18
+version: 1.4.4+18 # see config.dart
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,10 +32,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   settings_ui: ^2.0.2
   pref: ^2.7.1
-  provider: ^6.0.5
+  provider: ^6.1.1
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.1
   duration_picker: ^1.1.1
+  flutter_local_notifications: ^16.1.0
+  permission_handler: ^11.0.1
 
   flutter:
     sdk: flutter
@@ -49,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
   test: ^1.24.9
 
 # For information on the generic Dart part of this file, see the
