--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.5.0+18 # see config.dart
+version: 1.5.1+19 # see config.dart
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.4.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,16 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  analyzer: ^6.2.0
-  cupertino_icons: ^1.0.6
+  analyzer: ^6.4.1
+  cupertino_icons: ^1.0.8
   settings_ui: ^2.0.2
   pref: ^2.8.0
-  provider: ^6.1.1
-  shared_preferences: ^2.2.2
-  url_launcher: ^6.2.4
-  duration_picker: ^1.1.1
-  flutter_local_notifications: ^16.3.2
-  permission_handler: ^11.2.0
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  url_launcher: ^6.3.0
+  duration_picker: ^1.2.0
+  #flutter_local_notifications: ^16.3.2
+  permission_handler: ^11.3.1
 
   flutter:
     sdk: flutter
@@ -51,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   test: ^1.25.2
 
 # For information on the generic Dart part of this file, see the
