--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/.cxx
 
 # app sign keys
 android/upload-keystore.jks
