--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  analyzer: ^7.3.0
+  analyzer: ^7.4.5
   cupertino_icons: ^1.0.8
   settings_ui: ^2.0.2
   pref: ^2.8.0
-  provider: ^6.1.4
+  provider: ^6.1.5
   shared_preferences: ^2.5.3
   url_launcher: ^6.3.1
   duration_picker: ^1.2.0
   #flutter_local_notifications: ^16.3.2
-  permission_handler: ^12.0.0
+  permission_handler: ^12.0.0+1
 
   flutter:
     sdk: flutter
@@ -51,8 +51,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-  test: ^1.25.15
+  flutter_lints: ^6.0.0
+  test: ^1.26.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -82,10 +82,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: Arial
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  #       - asset: fonts/Arial-Regular.ttf
+  #       - asset: fonts/Arial-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
